5292 findunref is both slow and broken Reviewed by: Igor Kozhukhov <ikozhukhov@gmail.com> Reviewed by: Joshua Clulow <josh@sysmgr.org> Reviewed by: Gordon Ross <gwr@nexenta.com> Approved by: Dan McDonald <danmcd@omniti.com>